--- a/my-react-course/package.json
+++ b/my-react-course/package.json
@@ -25,6 +25,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "an-array-of-english-words": "^2.0.0",
+    "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "react-colorful": "^4.4.4",
     "tinycolor2": "^1.4.2"
