--- a/my-react-course/package.json
+++ b/my-react-course/package.json
@@ -23,7 +23,8 @@
     "sass-loader": "^10.1.0",
     "webpack": "^5.10.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "youtube-player": "^5.5.2"
   },
   "dependencies": {
     "an-array-of-english-words": "^2.0.0",
