--- a/my-react-course/package.json
+++ b/my-react-course/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
+    "@vimeo/player": "^2.14.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
