--- a/my-react-course/package.json
+++ b/my-react-course/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "an-array-of-english-words": "^2.0.0",
+    "countries-cities": "0.0.11",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
